--- a/microservice-config-product.yml
+++ b/microservice-config-product.yml
@@ -14,13 +14,13 @@ mybatis:
 spring:
  profiles: dev # 开发环境
  application:
-  name: microservice-product-config_bus # ******服务名*******
+  name: microservice-product-config # ******服务名*******
  datasource:
   type: com.alibaba.druid.pool.DruidDataSource
   driver-class-name: com.mysql.cj.jdbc.Driver
-  url: jdbc:mysql://127.0.0.1:3306/springcloud_db01?serverTimezone=GMT%2B8
+  url: jdbc:mysql://192.168.121.11:33306/springcloud_db01?serverTimezone=GMT%2B8
   username: root
-  password: root
+  password: 123456
   dbcp2:
    min-idle: 5
    initial-size: 5
@@ -31,7 +31,7 @@ eureka:
   registerWithEureka: true
   fetchRegistry: true
   serviceUrl:
-   defaultZone: http://eureka6001.com:6001/eureka
+   defaultZone: http://192.168.121.11:6001/eureka
  instance:
   instanceId: ${spring.application.name}:${server.port}
   prefer-ip-address: true
@@ -52,9 +52,9 @@ spring:
  datasource:
   type: com.alibaba.druid.pool.DruidDataSource
   driver-class-name: com.mysql.cj.jdbc.Driver
-  url: jdbc:mysql://127.0.0.1:3306/springcloud_db01?serverTimezone=GMT%2B8
+  url: jdbc:mysql://192.168.121.11:33306/springcloud_db02?serverTimezone=GMT%2B8
   username: root
-  password: root
+  password: 123456
   dbcp2:
    min-idle: 5
    initial-size: 5
@@ -65,7 +65,7 @@ eureka:
   registerWithEureka: true
   fetchRegistry: true
   serviceUrl:
-   defaultZone: http://eureka6001.com:6001/eureka
+   defaultZone: http://192.168.121.11:6001/eureka
  instance:
   instanceId: ${spring.application.name}:${server.port}
   prefer-ip-address: true
